--- a/clients/daia.css
+++ b/clients/daia.css
@@ -3,55 +3,79 @@
  */
 
 /* general layout */
-body { font-family: sans-serif; font-size: small }
+body { font-family: sans-serif; font-size: small; }
 div { padding: 5px;}
-h1 { border-bottom: 1px solid #aaa; margin: 0; }
-#meta { font-size: smaller; text-align: right; }
+h1 { margin: 0; font-size: 180%; }
 h1, h2 { font-weight: bold; }
-#about { border-top: 1px solid #fabd23; margin-top: 1em; }
+h2 { font-size: 140%; margin-bottom: 0; }
+
+a { text-decoration: none; color: #0000ff; }
+a:hover { text-decoration: underline; }
+
+#footer { margin-top: 1em; }
+#rawxml { margin-top: 1em; padding: 0.5em; }
 
 /* copy table */
-table { border-collapse:collapse; }
-th { background: #ccf; }
-td { border: 1px solid #666; padding: 3px; }
+table { border: none; border-spacing: 0px; }
+th { background: #E4E4E4; color: #000; padding: 3px; padding-left: 5px; }
+td,th { 
+  font-size: small;
+  border: none;
+  vertical-align:top; 
+  margin: 0px;
+}
+td {
+  border-bottom: 1px solid #D5D5D5;  
+  padding: 3px;
+}
 
 /* messages and errors */
-.messsage { border: 1px solid #c0c090; background: #f8eaba; }
-.error    { border: 1px solid #BB7070; background: #FFDBDB; }
+.messsage { background: #D9EDFF; margin: 1px; }
+.error    { background: #FFDBDB; margin: 1px; }
 .errno { color: red; font-weight: bold; }
 
 /* ids */
 .id { font-family: monospace; font-size: medium; }
+.invalid-id { color: #f00; }
 
-/* delay or expected time */
-.time {
-  padding-left: 22px; line-height: 18px; display: inline-block; 
-  background:transparent url(icons/clock_16.png) center left no-repeat
+div.id { padding: 0; }
+
+/* status icons */
+.available, .unavailable, .cur-unavail, .queue, .limitation, .time, .date, .storage { 
+    padding-left: 23px; line-height: 20px;
+    padding-right: 3px;
+    /*display: inline-block; */
+    display: block;
 }
 
-/* fragmented item and limited access */
-/* tr.fragment td, td.limited { background: #ccc; } */
-.limitation {  border: 1px solid #BB7070; background: #FFDBDB; }
-.limited { background: #FFDBDB; }
-.limited { background: #FFDBDB; }
+/* delay or expected time */
+.time { background:transparent url(icons/clock_16.png) center left no-repeat; }
+.date { background:transparent url(icons/calendar_16.png) center left no-repeat; }
 
-/* status icons (0=unknown, 1=available, 2=not available, 3=currently not available) */
-.status0, .available, .status2, .status3 { padding-left: 25px; line-height: 20px;
-    display: inline-block; }
-.status0 { background:transparent url(icons/questionmark_16.png) center left no-repeat; }
+.available { background:transparent url(icons/18px-Bullet-green.png) center left no-repeat; }
+.unavailable { background:transparent url(icons/18px-Bullet-red.png) center left no-repeat; }
+.cur-unavail { background:transparent url(icons/18px-Bullet-ambar.png) center left no-repeat; }
 
-/*
-.available { background:transparent url(18px-Bullet-green.png) center left no-repeat; }
-.status2 { background:transparent url(18px-Bullet-red.png) center left no-repeat; }
-.status3 { background:transparent url(questionmark_16.png) center left no-repeat; }
-*/
-.loan .available { background:transparent url(icons/daia_loan_16.png) center left no-repeat; }
-.presentation .available { background:transparent url(icons/daia_presentation_16.png) center left no-repeat; }
+.queue      { background:transparent url(icons/daia_queue_16.png) center left no-repeat; }
+.limitation { background:transparent url(icons/daia_limitation_16.png) center left no-repeat; }
+.storage    { background:transparent url(icons/daia_storage_16.png) center left no-repeat; }
 
+/* header icons */
+.document-icon, .item-icon, .location-icon, .loan-icon, 
+.presentation-icon, .openaccess-icon, .interloan-icon { padding-left: 20px;
+/*height:32px; width: 32px; */ text-align: left; padding-top: 0px;}
+
+.presentation-icon { background:transparent url(icons/daia_presentation_16.png) left top no-repeat; }
+.location-icon { background:transparent url(icons/home_16.png) left top no-repeat; }
+.loan-icon { background:transparent url(icons/daia_loan_16.png) left top no-repeat; }
+.interloan-icon { background:transparent url(icons/daia_interloan_16.png) left top no-repeat; }
+.document-icon { background:transparent url(icons/daia_document_16.png) left top no-repeat; }
+.item-icon { background:transparent url(icons/daia_item_16.png) left top no-repeat; }
+.openaccess-icon { background:transparent url(icons/daia_openaccess_16.png) left top no-repeat; }
 
 /* xmlverbatim */
-.xmlverb-default          { color: #333; font-family: monospace; font-size: medium;
-    background-color: #fff; border: 1px solid #666 }
+.xmlverb-default          { color: #333; font-family: monospace; 
+ font-size: medium; padding-left: 1em; border-left: 2px solid #D5D5D5; }
 .xmlverb-element-name     { color: #900 }
 .xmlverb-element-nsprefix { color: #660 }
 .xmlverb-attr-name        { color: #600 }
